--- a/.github/workflows/auto.yml
+++ b/.github/workflows/auto.yml
@@ -3,6 +3,7 @@ name: Auto
 on:
   schedule:
     - cron: "00 23 * * *" # 北京时间上午08:00
+    - cron: "00 00 * * *" # 北京时间上午08:00
   workflow_dispatch:
 
 env:
